--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <link rel="stylesheet" href="/src/assets/index.css">
+    <link rel="stylesheet" href="/node_modules/@flaticon/flaticon-uicons/css/regular/rounded.css">
+    <title>Trips</title>
   </head>
   <body>
     <div id="root"></div>
