Added a manifest to PWA

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/assets/index.css">
     <link rel="stylesheet" href="/node_modules/@flaticon/flaticon-uicons/css/regular/rounded.css">
+    <link rel="manifest" href="/manifest.webmanifest">
     <title>Trips</title>
   </head>
   <body class="bg-slate-900">
