--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/src/assets/index.css">
     <link rel="stylesheet" href="/node_modules/@flaticon/flaticon-uicons/css/regular/rounded.css">
     <link rel="manifest" href="/manifest.webmanifest">
+    <link rel="icon" href="/icon128.png" type="image/x-icon">
     <title>Trips</title>
   </head>
   <body class="bg-slate-900">
