--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="/icon128.png" type="image/x-icon">
     <title>Trips</title>
   </head>
-  <body class="bg-slate-900">
+  <body class="bg-neutral-900">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
