--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/assets/index.css">
     <link rel="stylesheet" href="/node_modules/@flaticon/flaticon-uicons/css/regular/rounded.css">
-    <link rel="manifest" href="/manifest.webmanifest">
+    <link rel="manifest" href="./app/manifest.webmanifest">
     <link rel="icon" href="/icons/icon-svg.svg" type="image/svg">
     <title>Trips</title>
   </head>
