--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </script> -->
     <title>Trips</title>
   </head>
-  <body class="bg-neutral-900 text-white">
+  <body class="bg-grayblue-900 text-white">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
