--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link rel="manifest" href="/manifest.webmanifest" />
     <link rel="icon" href="/icons/icon-svg.svg" type="image/svg" />
 
-    <link rel="apple-touch-icon" href="public/icons/png/apple-icon-180.png" />
+    <link rel="apple-touch-icon" href="./public/icons/png/apple-icon-180.png" />
 
     <meta name="apple-mobile-web-app-capable" content="yes" />
 
