--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       content="#0d1124"
     />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" href="/src/assets/index.css" />
+    <link rel="stylesheet" href="/src/styles/index.css" />
     <link
       rel="stylesheet"
       href="/node_modules/@flaticon/flaticon-uicons/css/regular/rounded.css"
