Fix: Multiple issues

--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@
   </head>
   <body class="dark:bg-grayblue-900 dark:text-white">
     <div id="root"></div>
+    <div id="modal-root"></div>
     <script type="module" src="/src/main.tsx" async></script>
   </body>
 </html>
