Deploy : New deployment on server

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
     </script>
     <title>Trips</title>
   </head>
-  <body class="dark:bg-grayblue-900 dark:text-white">
+  <body class="dark:bg-grayblue-900 dark:text-grayblue-100">
     <div id="root"></div>
     <div id="modal-root"></div>
     <script type="module" src="/src/main.tsx" async></script>
